# planning

./: .env.example  .gitignore  CLAUDE.md  EMAIL_CONFIG.md  README.md  SECURITY.md  claude.txt  debug_dates.py  gunicorn_config.py  main.py  pyproject.toml  pytest.ini  run_prod.py  test_email.py  test_pdf_generation.py
.github/workflows/: ci.yml
src/planning_pro/: app.py  config.py  database.py  models.py  net_salary_calculator.py  pdf_generator.py  salary_calculator.py  security.py
templates/: base.html  error.html  feuille_heures.html  forgot_password.html  index.html  login.html  planning.html  register.html  reset_password.html
tests/: __init__.py  conftest.py  test_api.py  test_integration.py  test_models.py  test_salary_calculator.py  test_security.py
